--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3147,7 +3147,7 @@ input, select, textarea {
 			.wrapper.style2 button,
 			.wrapper.style2 .button {
 				background-color: transparent;
-				color: #828282 !important;
+				color: #a2a2a2 !important;
 				box-shadow: inset 0 0 0 2px #e6e6e6;
 			}
 
@@ -3322,6 +3322,7 @@ input, select, textarea {
 
 			.wrapper.style2 a {
 				color: inherit;
+				text-decoration: underline;
 				border-bottom-color: #d6d6d6;
 			}
 
@@ -3657,7 +3658,7 @@ input, select, textarea {
 			#header input[type="button"]:active,
 			#header button:active,
 			#header .button:active {
-				background-color: rgba(255, 255, 255, 0.2);
+				background-color: rgba(255, 255, 255, 0.1);
 			}
 
 			#header input[type="submit"].primary,
@@ -3669,6 +3670,15 @@ input, select, textarea {
 				background-color: #ffffff;
 				color: #11B4EE !important;
 			}
+
+			#header input[type="submit"].primary:hover,
+			#header input[type="reset"].primary:hover,
+			#header input[type="button"].primary:hover,
+			#header button.primary:hover,
+			#header .button.primary:hover {
+				background-color: rgba(255, 255, 255, 0.85);
+			}
+
 
 		#header label {
 			color: #ffffff;
@@ -3821,7 +3831,9 @@ input, select, textarea {
 		}
 
 		#header hr {
-			border-bottom-color: rgba(255, 255, 255, 0.25);
+			border-bottom-color: rgba(255, 255, 255, 0.45);
+
+
 		}
 
 		#header h1 {
