--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,6 +226,7 @@ input, select, textarea {
 
 	@media screen and (max-width: 736px) {
 
+
 		h2 {
 			font-size: 1.25em;
 		}
@@ -1852,7 +1853,8 @@ input, select, textarea {
 		font-weight: bold;
 		height: 2.85em;
 		line-height: 2.95em;
-		padding: 0 1.75em;
+		/*padding: 0 1.75em;*/
+		padding: 0 2.75em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
@@ -1863,7 +1865,7 @@ input, select, textarea {
 		input[type="button"].icon,
 		button.icon,
 		.button.icon {
-			padding-left: 1.35em;
+			padding-left: 2.35em;
 		}
 
 			input[type="submit"].icon:before,
@@ -4003,11 +4005,11 @@ input, select, textarea {
 			}
 
 				#header h1 {
-					font-size: 2em;
+					font-size: 2.5em;
 				}
 
 				#header p {
-					font-size: 1em;
+					font-size: 1.2em;
 					line-height: inherit;
 				}
 
