--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1933,7 +1933,8 @@ input, select, textarea {
 		input[type="button"],
 		button,
 		.button {
-			padding: 0;
+			/*padding: 0;*/
+			padding: 0 2.75em;
 		}
 
 	}
@@ -2963,7 +2964,7 @@ input, select, textarea {
 /* Wrapper */
 
 	.wrapper {
-		padding: 4.5em 0 2.5em 0 ;
+		padding: 7.5em 0 2.5em 0 ;
 		background-color: #ffffff;
 		border-bottom: solid 2px #eeeeee;
 	}
